--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -87,6 +87,14 @@ h1{
   display: flex;
   align-items: center;
 }
+.linking{
+  margin-left: 20px;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+}
+
 .button {
   appearance: none;
   outline: none;
@@ -106,4 +114,21 @@ h1{
   left: 50%;  
   transform: translateX(-50%);
 }
-
+input[type="file"] {
+  display: none;
+}
+.custom-file-upload {
+  padding: 0px;
+  -webkit-tap-highlight-color: transparent;
+  color:#1C943F;
+  font-size: 17px;
+  font-weight: 500;
+  letter-spacing: -0.2px;
+  position: fixed;
+  bottom: 124px;
+}
+.center{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
